@@ -120,3 +120,7 @@ Reorganize GitHub into folders for easy future reference.
 - change import in major .py programs to reflect new changes. 
 - create a readme for statistical tests for instructions.
 
+25/04/2017
+*statisticaltest.py
+Implementing Johansen test, ADF and CADF test
+
